syntax = "proto3";

package pb;


option go_package = "github.com/losuch/fc-order/pb";


message CreateAccountRequest {
    string email = 1;
    string password = 2;
    string role = 3;
}

message CreateAccountResponse {
    string account_id = 1;
}